crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_tuple.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_tuple), functions::parse_stmt,\n    \"(a, x+1) : u256\")"

---
error: Variable declaration must begin with `let`
  ┌─ stmt_vardecl_tuple:1:1
  │
1 │ (a, x+1) : u256
  │ ^^^^^^^^ invalid variable declaration
  │
  = Example: `let x: u8 = 1`


